// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The drag service should run with inertia and stop 1`] = `
[
  [
    {
      "delta": {
        "x": 0,
        "y": 0,
      },
      "distance": {
        "x": 522,
        "y": 394,
      },
      "final": {
        "x": 522,
        "y": 394,
      },
      "hasInertia": false,
      "isGrabbing": true,
      "mode": "drag",
      "origin": {
        "x": 0,
        "y": 0,
      },
      "target": <div />,
      "x": 522,
      "y": 394,
    },
  ],
  [
    {
      "delta": {
        "x": 0,
        "y": 0,
      },
      "distance": {
        "x": 522,
        "y": 394,
      },
      "final": {
        "x": 522,
        "y": 394,
      },
      "hasInertia": false,
      "isGrabbing": true,
      "mode": "drag",
      "origin": {
        "x": 0,
        "y": 0,
      },
      "target": <div />,
      "x": 522,
      "y": 394,
    },
  ],
]
`;

exports[`The drag service should start, drag and drop 1`] = `
[
  [
    {
      "delta": {
        "x": 0,
        "y": 0,
      },
      "distance": {
        "x": 10,
        "y": 10,
      },
      "final": {
        "x": 10,
        "y": 10,
      },
      "hasInertia": false,
      "isGrabbing": true,
      "mode": "drag",
      "origin": {
        "x": 0,
        "y": 0,
      },
      "target": <div />,
      "x": 10,
      "y": 10,
    },
  ],
  [
    {
      "delta": {
        "x": 0,
        "y": 0,
      },
      "distance": {
        "x": 10,
        "y": 10,
      },
      "final": {
        "x": 10,
        "y": 10,
      },
      "hasInertia": false,
      "isGrabbing": true,
      "mode": "drag",
      "origin": {
        "x": 0,
        "y": 0,
      },
      "target": <div />,
      "x": 10,
      "y": 10,
    },
  ],
]
`;
